--- a/DVMAX-DirectoryOfService/WebFolder/dvmaxmetrics.waPage/styles/index.css
+++ b/DVMAX-DirectoryOfService/WebFolder/dvmaxmetrics.waPage/styles/index.css
@@ -3,30 +3,92 @@
 	Changes to this CSS file might be lost when it is regenerated.
 */
 
-#dataGrid3 {
+#dataGrid5 {
+	z-index: 1;
+	height: 300px;
+	top: 10px;
+	left: 10px;
+	right: 10px;
+	position: absolute;
+}
+
+#container2 {
 	z-index: 5;
-	width: 488px;
-	height: 339px;
-	top: 434px;
-	left: 65px;
+	top: 23px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
 	position: absolute;
 }
 
-#dataGrid2 {
-	z-index: 4;
-	width: 583px;
-	height: 326px;
-	top: 61px;
-	left: 579px;
+#richText2 {
+	z-index: 1;
+	width: 66px;
+	height: 23px;
+	top: 0px;
+	left: 0px;
 	position: absolute;
 }
 
-#dataGrid1 {
+#menuItem2 {
 	z-index: 2;
-	width: 488px;
-	height: 326px;
-	top: 61px;
-	left: 70px;
+	width: 66px;
+	height: 23px;
+	top: 0px;
+	left: 0px;
+	position: absolute;
+}
+
+#container1 {
+	z-index: 4;
+	top: 23px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	position: absolute;
+}
+
+#richText1 {
+	z-index: 1;
+	width: 64px;
+	height: 22px;
+	top: 0px;
+	left: 0px;
+	position: absolute;
+}
+
+#menuItem1 {
+	z-index: 1;
+	width: 66px;
+	height: 23px;
+	top: 0px;
+	left: 0px;
+	position: absolute;
+}
+
+#menuBar1 > .waf-menuItem {
+	margin-bottom: 0px;
+}
+
+#menuBar1 > .waf-menuItem:not(.waf-menuItem-last) {
+	margin-right: 5px;
+}
+
+#menuBar1 {
+	z-index: 3;
+	height: 23px;
+	top: 0px;
+	left: 0px;
+	right: 981px;
+	position: absolute;
+}
+
+#tabView1 {
+	z-index: 8;
+	width: 1189px;
+	height: 727px;
+	top: 42px;
+	left: 66px;
 	position: absolute;
 }
 
