--- a/DVMAX-DirectoryOfService/WebFolder/dvmaxmetrics.waPage/styles/index.css
+++ b/DVMAX-DirectoryOfService/WebFolder/dvmaxmetrics.waPage/styles/index.css
@@ -3,10 +3,80 @@
 	Changes to this CSS file might be lost when it is regenerated.
 */
 
+#button2 {
+	z-index: 6;
+	width: 92px;
+	height: 22px;
+	top: 62px;
+	left: 1079px;
+	position: absolute;
+}
+
+#imageButton1 {
+	width: 130px;
+	height: 45px;
+	top: 80px;
+	left: 143px;
+}
+
+#icon1 {
+	z-index: 9;
+	width: 24px;
+	height: 24px;
+	top: 10px;
+	left: 53px;
+}
+
+#label3 {
+	z-index: 9;
+	width: 83px;
+	height: 14px;
+	top: 15px;
+	left: 82px;
+}
+
+#label2 {
+	z-index: 5;
+	width: 75px;
+	height: 14px;
+	top: 68px;
+	left: 18px;
+	position: absolute;
+	min-width: 75px;
+}
+
+#textField2 {
+	z-index: 5;
+	width: 130px;
+	height: 22px;
+	top: 64px;
+	left: 98px;
+	position: absolute;
+}
+
+#label1 {
+	z-index: 3;
+	width: 75px;
+	height: 14px;
+	top: 662px;
+	left: 26px;
+	position: absolute;
+	min-width: 75px;
+}
+
+#textField1 {
+	z-index: 3;
+	width: 1000px;
+	height: 22px;
+	top: 658px;
+	left: 106px;
+	position: absolute;
+}
+
 #dataGrid5 {
 	z-index: 1;
-	height: 300px;
-	top: 10px;
+	height: 502px;
+	top: 100px;
 	left: 10px;
 	right: 10px;
 	position: absolute;
@@ -84,11 +154,20 @@
 }
 
 #tabView1 {
-	z-index: 8;
+	z-index: 6;
 	width: 1189px;
 	height: 727px;
-	top: 42px;
-	left: 66px;
+	top: 36px;
+	left: 34px;
+	position: absolute;
+}
+
+#Tab2GoToList {
+	z-index: 1;
+	width: 92px;
+	height: 22px;
+	top: 646px;
+	left: 1049px;
 	position: absolute;
 }
 
